# zero2prod

./: Cargo.toml
.github/workflows/: audit-on-cargo-change.yml  cargo_ci.yml  myfirst.yml
config/: base.yml  local.yml  prod.yml
migrations/: 20210521063350_store_email_data.sql  20210521081915_store_email_data2.sql  20210521085315_backfill.sql  20210521090647_redo_sub_table.sql
scripts/: init_db.sh
src/: config.rs  email_client.rs  lib.rs  main.rs  startup.rs  telem.rs
src/domain/: mod.rs  sub_email.rs  sub_name.rs
src/routes/: health_check.rs  mod.rs  renamers.rs  sub_confirm.rs  subscriptions.rs  subscriptions_ANYHOW.rs  subscriptions_CUSTOM_ERRORS.rs  subscriptions_CUSTOM_ERRORS2.rs  subscriptions_NAIVE_ERRORS.rs  subscriptions_THIS_ERROR.rs  subscriptions_THIS_ERROR2.rs
tests/: health_check.rs  testapi.http
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
