[package]
name = "zero2prod"
version = "0.1.0"
authors = ["ilmoi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs" #could omit too, it's the default

[[bin]] #array, since we can have multiple bin crates
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
tokio = "1.6.0"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
config = "0.11.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls", #use actix runtime for futures and rustls as TLS
    "macros", #gives access to useful macros
    "postgres", #unlocks postgres specific sql
    "uuid", #support for mapping uuids to the uuid type from the uuid crate
    "chrono", #adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate
    "migrate" #gives access to same migrate functionality as we used in the cli
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
